# ayra-agent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  ecosystem.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
python/: README.md  pyproject.toml  requirements-ayra.txt
python/ayra/: __init__.py  __main__.py  ayra_constants.py  ayra_time.py  runtime_server.py  telegram_gateway.py  utils.py
python/ayra/agent/: __init__.py  skill_bundles.py  skill_utils.py  tool_guardrails.py
python/ayra/cron/: __init__.py  blueprint_catalog.py  jobs.py  scheduler_provider.py  suggestion_catalog.py  suggestions.py
python/ayra/cron/scripts/: classify_items.py
python/ayra/skills/: __init__.py  loader.py
python/ayra/skills/bundles/: README.md
python/ayra/skills/bundles/skills/apple/apple-notes/: SKILL.md
python/ayra/skills/bundles/skills/apple/apple-reminders/: SKILL.md
python/ayra/skills/bundles/skills/apple/findmy/: SKILL.md
python/ayra/skills/bundles/skills/apple/imessage/: SKILL.md
python/ayra/skills/bundles/skills/autonomous-ai-agents/claude-code/: SKILL.md
python/ayra/skills/bundles/skills/autonomous-ai-agents/codex/: SKILL.md
python/ayra/skills/bundles/skills/autonomous-ai-agents/hermes-agent/: SKILL.md
python/ayra/skills/bundles/skills/computer-use/: SKILL.md
python/ayra/skills/bundles/skills/dogfood/: SKILL.md
python/ayra/skills/bundles/skills/yuanbao/: SKILL.md
python/ayra_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+491 files in other folders)
