[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ayra-python"
version = "0.1.0"
description = "Required AYRA Python runtime — cron blueprints and scheduling sidecar"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "croniter>=2.0.0",
  "PyYAML>=6.0",
  "python-telegram-bot>=21.6",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ayra*"]
